# careconnect

./: .gitignore  pyproject.toml  requirement.txt
careconnect/: .gitignore  1.4  Dockerfile  constant.py  db.sqlite3  docker-compose.yml  requirement.txt  requirements.txt
careconnect/accounts/: authentication.py  consumers.py  models.py  serializers.py  urls.py  views.py
careconnect/accounts/migrations/: 0001_initial.py
careconnect/apis/: authentication.py  email_utils.py  models.py  serializers.py  urls.py  utils.py  views.py
careconnect/apis/migrations/: 0002_delete_user.py
careconnect/appointments/: models.py  serializers.py  urls.py  views.py
careconnect/careconnect/: asgi.py  settings.py  urls.py
careconnect/core/: models.py  serializers.py  urls.py  views.py
careconnect/healthcare/: consumer.py  models.py  serializers.py  urls.py  utils.py  views.py
